--- a/tables/MonopolyMapPointData.json
+++ b/tables/MonopolyMapPointData.json
@@ -1,6 +1,31 @@
 {
     "data": [
         {
+            "id": 1,
+            "mapId": 1,
+            "pointId": 1,
+            "function": [
+                0
+            ],
+            "movementPoint": 1,
+            "occupyCost": {
+                "2": 10,
+                "1": 10
+            },
+            "ishidden": 1,
+            "nextPoint": "",
+            "team": 0,
+            "creatType": {},
+            "enemyGroup": 0,
+            "enable": 0,
+            "element": 0,
+            "functionType": 0,
+            "building": 0,
+            "yaxis": 0.0,
+            "rotation": 0.0,
+            "enemyTergetPoint": {}
+        },
+        {
             "id": 2,
             "mapId": 1,
             "pointId": 2,
