--- a/tables/SkillConfigData.json
+++ b/tables/SkillConfigData.json
@@ -4160,6 +4160,12 @@
             ]
         },
         {
+            "animctrlId": 5101301,
+            "frames": [
+                "5101301000"
+            ]
+        },
+        {
             "animctrlId": 5101501,
             "frames": [
                 "5101501000"
@@ -13343,6 +13349,12 @@
             "animctrlId": 40010805,
             "frames": [
                 "40010805000"
+            ]
+        },
+        {
+            "animctrlId": 40010811,
+            "frames": [
+                "40010811000"
             ]
         },
         {
