--- a/tables/BpUnlockRewardBySeasonIdData.json
+++ b/tables/BpUnlockRewardBySeasonIdData.json
@@ -1,6 +1,16 @@
 {
     "data": [
         {
+            "seasonId": 30001,
+            "id": [
+                5,
+                6,
+                7,
+                8,
+                9
+            ]
+        },
+        {
             "seasonId": 30002,
             "id": [
                 14,
